<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/txt1"
        android:background="#0d09de"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/txt2"
        android:textSize="20sp"
        android:textColor="#E42C2C"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt3"
            android:textColor="#F02424"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/edturl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="#D8D7EC"
            android:hint="@string/txt4"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="o"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/veluuthoat">
        <Button
            android:id="@+id/btrun"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ve"
            android:text="@string/txt5"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/tvNetwork"
            android:textColor="#1F15EC"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp">
        </TextView>
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/tvStatus"
            android:textColor="#F44336"
            android:textSize="18sp"
            android:layout_gravity="center">
        </TextView>
        <Button
            android:id="@+id/btncon"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/exit"
            android:text="@string/txt6"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_marginLeft="0dp" />
    </LinearLayout>
    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">
    </WebView>

</LinearLayout>